--- a/app/views/events/password_form.html.erb
+++ b/app/views/events/password_form.html.erb
@@ -1,6 +1,6 @@
 <h1 class="mt-4 text-center">Доступ только по пин-коду</h1>
 
-<%= form_tag("", method: "post") do |f| %>
+<%= form_tag("", method: "post") do %>
   <div class="form mt-3">
     <%= label :pincode, "Пин-код", class: "font-weight-bold" %>
     <%= text_field_tag :pincode, params[:pincode], class: "form-control" %>
